# ostis-metasystem

./: repo.path
platform-dependent-components/problem-solver/cxx/: CMakeLists.txt
platform-dependent-components/problem-solver/cxx/glossaryModule/: CMakeLists.txt  GlossaryModule.cpp  GlossaryModule.hpp
platform-dependent-components/problem-solver/cxx/glossaryModule/agent/: CreateGlossaryAgent.cpp  CreateGlossaryAgent.hpp  ScProcessingFunctions.cpp  ScnTexProcessingFunctions.cpp
platform-dependent-components/problem-solver/cxx/glossaryModule/keynodes/: GlossaryKeynodes.cpp  GlossaryKeynodes.hpp
platform-dependent-components/problem-solver/cxx/glossaryModule/specification/create-glossary-agent/: lib_component_ui_menu_create_glossary.scs  ui_menu_create_glossary.scs
platform-dependent-components/problem-solver/cxx/glossaryModule/test/: tests.cmake
platform-dependent-components/problem-solver/cxx/semanticNeighborhoodModule/: CMakeLists.txt  SemanticNeighborhoodModule.cpp  SemanticNeighborhoodModule.hpp
platform-dependent-components/problem-solver/cxx/semanticNeighborhoodModule/agent/: ObtainingSemanticNeighborhoodAgent.cpp  ObtainingSemanticNeighborhoodAgent.hpp  SemanticNeighborhoodToScnTranslationAgent.cpp  SemanticNeighborhoodToScnTranslationAgent.hpp
platform-dependent-components/problem-solver/cxx/semanticNeighborhoodModule/keynodes/: Keynodes.cpp  Keynodes.hpp
platform-dependent-components/problem-solver/cxx/semanticNeighborhoodModule/test/: tests.cmake
platform-dependent-components/problem-solver/cxx/semanticNeighborhoodModule/test/testStructures/: correctTest.scs  test.scs
platform-dependent-components/problem-solver/cxx/semanticNeighborhoodModule/test/units/: test.cpp
platform-dependent-components/problem-solver/cxx/semanticNeighborhoodModule/utils/: Utils.cpp  Utils.hpp
sc-models/knowledge-base/: set_of_valid_glossary_parameters.scs
sc-models/knowledge-base/create-glossary-agent/: default_glossary_parameters.scs  nrel_glossary.scs  (+2 more)
